# cloud-hackbox

./: .ansible-lint  .gitattributes  .gitignore  .pre-commit-config.yaml  .terraformignore  Makefile  Pipfile  README.md  kali-ami.json  parrot.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/files/: .terraformrc
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
http/kali/: preseed.cfg
kali/: kali-ami.json  kali-ami.json.pkr.hcl  kali-ami.pkr.hcl  kali-ova.json  variables.pkr.hcl
kali/ansible/: playbook.yml  requirements.yml  variables.yml
kali/ansible/files/apt/: sources.list
kali/ansible/files/logs/: ufw.j2
kali/ansible/files/ssh/: sshd_config.j2
kali/ansible/files/vnc/: Xvnc-session.sh  vncserver@.service  vncserver@.service.j2  xstartup.sh
kali/ansible/handlers/: main.yml
kali/ansible/molecule/default/: molecule.yml  prepare.yml  verify.yml
kali/ansible/tasks/: aws.yml  firewall.yml  packages.yml  pentest.yml  ssh.yml  ssm.yml  user.yml  vnc.yml
kali/http/: preseed.cfg
kali/scripts/: reboot.sh
kali/terraform/: README.md  ci-backend.hcl  input.tfvars.example  main.tf  outputs.tf  server.tf  userdata.sh  variables.tf
parrot/: parrot-ova.json
