[tool.poetry]
name = "cloud-hackbox"
version = "0.1.0"
description = "Create custom AMIs with Packer and Ansible to enable rapid provisioning of offensive infrastructure in AWS using Terraform."
authors = ["Artis3n <dev@artis3nal.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^5.5.0"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
ansible-lint = "^5.4.0"
molecule = {extras = ["docker"], version = "^3.6.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
